--- a/public/addStudents.css
+++ b/public/addStudents.css
@@ -1,15 +1,16 @@
 body{
-    background-color: #f2e9e4;
+    /* background-color: #f2e9e4; */
+    background-image: url("hexagon.jpg")
 }
 .button{
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     padding: 5px 10px;
     border-radius: 10px;
 }
 #legend{
-    background-color: #22223b;
-    color:#f2e9e4
+    background-color: #051726;
+    color:#f7f8f8
 }
 
 #studentCreation{
@@ -23,8 +24,8 @@ body{
 }
 #notification{
     text-align: center;
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     width: 30%;
     border-radius: 10px;
     margin: 0 auto;
@@ -32,21 +33,20 @@ body{
 #horizontalMenu{
     position: fixed;
     width: 100%;
-    background-color: #22223b;
+    background-color: #051726;
     left: 0%;
     top: 0%;
     height: 50px;
 }
 .links{
-    color:#f2e9e4;
+    color:#f7f8f8;
     text-decoration:none;
 }
 #warning{
     text-align: center;
-    color: #22223b;
+    color: #051726;
     font-weight: 1000;
 }
-
 #menuIcons{
     display: flex;
     justify-content: space-between;
