--- a/public/attendance.css
+++ b/public/attendance.css
@@ -1,31 +1,29 @@
 body{
-    background-color: #f2e9e4;
+    /* background-color: #f2e9e4; */
+    background-image: url("hexagon.jpg");
 }
 #horizontalMenu{
     position: fixed;
     width: 100%;
-    background-color: #22223b;
+    background-color: #051726;
     left: 0%;
     top: 0%;
     height: 50px;
 }
-
 #menuIcons{
     display: flex;
     justify-content: space-between;
     height: 50px;
     margin-top: 15px;
 }
-
 .links{
-    color:#f2e9e4;
+    color:#f7f8f8;
     text-decoration:none;
 }
 #legend{
-    background-color: #22223b;
-    color:#f2e9e4
+    background-color: #051726;
+    color:#f7f8f8;
 }
-
 #attendance{
     border: solid black 3px;
     display: block;
@@ -38,14 +36,13 @@ body{
     margin: 100px 0;
 }
 .button{
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     padding: 5px 10px;
     border-radius: 10px;
 }
-
 #warning{
     text-align: center;
-    color: #22223b;
+    color: #051726;
     font-weight: 1000;
 }
