--- a/public/createClass.css
+++ b/public/createClass.css
@@ -1,15 +1,16 @@
 body{
-    background-color: #f2e9e4;
+    /* background-color: #f2e9e4; */
+    background-image: url("hexagon.jpg");
 }
 .button{
-    background-color: #22223b;
+    background-color: #051726;
     color:#f2e9e4;
     padding: 5px 10px;
     border-radius: 10px;
 }
 
 #legend{
-    background-color: #22223b;
+    background-color: #051726;
     color:#f2e9e4
 }
 #classCreation{
@@ -31,7 +32,7 @@ body{
 }
 #notification{
     text-align: center;
-    background-color: #22223b;
+    background-color: #051726;
     color:#f2e9e4;
     width: 30%;
     border-radius: 10px;
@@ -40,7 +41,7 @@ body{
 #horizontalMenu{
     position: fixed;
     width: 100%;
-    background-color: #22223b;
+    background-color: #051726;
     left: 0%;
     top: 0%;
     height: 50px;
@@ -57,6 +58,6 @@ body{
 }
 #warning{
     text-align: center;
-    color: #22223b;
+    color: #051726;
     font-weight: 1000;
 }
