--- a/views/displayTeachers.ejs
+++ b/views/displayTeachers.ejs
@@ -21,7 +21,7 @@
                 <p></p>
             </div>
         </div><br><br>
-        <h2><%=teachers[0].Teacher%> 's Data</h2>
+        <h2><%=teachers[0].Teacher%> 's Data%></h2>
         <div id = "table">
             <table class = "records">
                 <thead>
