--- a/views/students.ejs
+++ b/views/students.ejs
@@ -24,7 +24,7 @@
             <h3 id = "warning">Select a student to view their data</h3>
             <form action="/students" method="post" id = "students">
                 <legend id = "legend">Classes</legend><br>
-                <label for = "teachers">Teacher:</label>
+                <label for = "student">Student:</label>
                 <select type = "text" name = "student">
                     <option value = "">Select Student</option>
                     <% for (let i = 0; i < students.length; i ++) {%>
