--- a/public/displayAttendance.css
+++ b/public/displayAttendance.css
@@ -1,16 +1,16 @@
 body{
-
-    background-color: #f2e9e4;
+    background-image: url("hexagon.jpg");
+    /* background-color: #f2e9e4; */
 }
 h2{
     text-align: center;
-    color: #22223b;
+    color: #051726;
 }
 
 #horizontalMenu{
     position: fixed;
     width: 100%;
-    background-color: #22223b;
+    background-color: #051726;
     left: 0%;
     top: 0%;
     height: 50px;
@@ -27,11 +27,11 @@ h2{
     text-decoration:none;
 }
 #legend{
-    background-color: #22223b;
+    background-color: #051726;
     color:#f2e9e4
 }
 .button{
-    background-color: #22223b;
+    background-color: #051726;
     color:#f2e9e4;
     padding: 5px 10px;
     border-radius: 10px;
@@ -51,7 +51,7 @@ h2{
 }
 
 .records thead tr{
-    background-color: #22223b;
+    background-color: #051726;
     color:#f2e9e4;
     text-align: center;
     font-weight: bold;
@@ -65,6 +65,6 @@ h2{
     border-bottom: 1px solid ;
 }
 .records tbody tr:nth-of-type(even){
-    background-color: #22223b;
+    background-color: #051726;
     color: #f2e9e4;
 }
