--- a/public/displayClasses.css
+++ b/public/displayClasses.css
@@ -1,11 +1,12 @@
 body{
 
-    background-color: #f2e9e4;
+    /* background-color: #f2e9e4; */
+    background-image: url("hexagon.jpg");
 }
 
 h2{
     text-align: center;
-    color: #22223b;
+    color: #051726;
 }
 #menuIcons{
     display: flex;
@@ -17,22 +18,22 @@ h2{
 #horizontalMenu{
     position: fixed;
     width: 100%;
-    background-color: #22223b;
+    background-color: #051726;
     left: 0%;
     top: 0%;
     height: 50px;
 }
 .links{
-    color:#f2e9e4;
+    color:#f7f8f8;
     text-decoration:none;
 }
 #legend{
-    background-color: #22223b;
-    color:#f2e9e4
+    background-color: #051726;
+    color:#f7f8f8;
 }
 .button{
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     padding: 5px 10px;
     border-radius: 10px;
 }
@@ -51,8 +52,8 @@ h2{
 }
 
 .records thead tr{
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     text-align: center;
     font-weight: bold;
 }
@@ -65,6 +66,6 @@ h2{
     border-bottom: 1px solid ;
 }
 .records tbody tr:nth-of-type(even){
-    background-color: #22223b;
-    color: #f2e9e4;
+    background-color: #051726;
+    color: #f7f8f8;
 }
