--- a/public/displayTeachers.css
+++ b/public/displayTeachers.css
@@ -1,15 +1,15 @@
 body{
-
-    background-color: #f2e9e4;
+    background-image: url("hexagon.jpg");
+    /* background-color: #f2e9e4; */
 }
 h2{
     text-align: center;
-    color: #22223b;
+    color: #051726;
 }
 #horizontalMenu{
     position: fixed;
     width: 100%;
-    background-color: #22223b;
+    background-color: #051726;
     left: 0%;
     top: 0%;
     height: 50px;
@@ -21,16 +21,16 @@ h2{
     margin-top: 15px;
 }
 .links{
-    color:#f2e9e4;
+    color:#f7f8f8;
     text-decoration:none;
 }
 #legend{
-    background-color: #22223b;
-    color:#f2e9e4
+    background-color: #051726;
+    color:#f7f8f8;
 }
 .button{
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     padding: 5px 10px;
     border-radius: 10px;
 }
@@ -50,8 +50,8 @@ h2{
 }
 
 .records thead tr{
-    background-color: #22223b;
-    color:#f2e9e4;
+    background-color: #051726;
+    color:#f7f8f8;
     text-align: center;
     font-weight: bold;
 }
@@ -64,6 +64,6 @@ h2{
     border-bottom: 1px solid ;
 }
 .records tbody tr:nth-of-type(even){
-    background-color: #22223b;
-    color: #f2e9e4;
+    background-color: #051726;
+    color: #f7f8f8;
 }
