added exam qualifications module

--- a/views/createClass.ejs
+++ b/views/createClass.ejs
@@ -14,6 +14,7 @@
                     <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
                     <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
                     <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                    <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
                     <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                     <p></p>
                 </div>
