--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -15,6 +15,7 @@
             <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
             <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
             <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+            <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
             <p></p>
             </div>
         </div><br><br>
