--- a/views/displayStudents.ejs
+++ b/views/displayStudents.ejs
@@ -16,6 +16,7 @@
                 <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
                 <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                 <p></p>
             </div>
