--- a/views/displayTeachers.ejs
+++ b/views/displayTeachers.ejs
@@ -17,6 +17,7 @@
                 <a class = "links" href = "createClass.ejs">Create Classes<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
                 <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
                 <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                 <p></p>
             </div>
