--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
                         <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
                         <!-- <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a> -->
                         <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                        <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
                         <button id = "btn"><a id = "linksss" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a></button>
                         <p></p>
                 </div>
@@ -28,6 +29,7 @@
                         <a id = "linkss"href = "students.ejs">Students<i class="fas fa-users"></i></a>
                         <a id = "linkss"href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
                         <a id = "linkss"href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                        <a id = "linkss"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
                         <a id = "linkss"href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                     </div>
                     <div id = content > 
