added ability to check defaulters per unit

--- a/views/addStudents.ejs
+++ b/views/addStudents.ejs
@@ -13,6 +13,7 @@
             <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
             <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
             <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
+            <a class = "links"href = "defaulters.ejs">Defaulters<i class="fas fa-exclamation-triangle"></i></a>
             <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
             <p></p>
             </div>
