--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
                         <!-- <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a> -->
                         <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
                         <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
+                        <a class = "links"href = "defaulters.ejs">Defaulters<i class="fas fa-exclamation-triangle"></i></a>
                         <button id = "btn"><a id = "linksss" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a></button>
                         <p></p>
                 </div>
@@ -30,6 +31,7 @@
                         <a id = "linkss"href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
                         <a id = "linkss"href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
                         <a id = "linkss"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
+                        <a id = "linkss"href = "defaulters.ejs">Defaulters<i class="fas fa-exclamation-triangle"></i></a>
                         <a id = "linkss"href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                     </div>
                     <div id = content > 
