--- a/views/defaulters.ejs
+++ b/views/defaulters.ejs
@@ -15,6 +15,7 @@
                 <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
                 <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links"href = "exam.ejs">Exam qualification<i class="fas fa-file"></i></a>
                 <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                 <p></p>
             </div>
@@ -22,7 +23,7 @@
 
         <div id = "form">
             <h3 id = "warning">Select a unit to view defaulters for that unit</h3>
-            <form method = "post" action="/exam" id = "classes">
+            <form method = "post" action="/defaulters" id = "classes">
                 <legend id = "legend">Classes</legend><br>
                 <label for = "classID">Class ID:</label>
                     <select type = "text" name="classID" >
